syntax = "proto3";
package wire;

message InternalTransaction {
  uint64 Index = 1;
  uint64 Amount = 2;
  string Receiver = 3;
  string Sender = 4;
  uint64 UntilBlock = 5;
}

message Event {
  uint64 Index = 1;
  string Creator = 2;
  repeated bytes Parents = 3;
  uint64 LamportTime = 4;
  repeated InternalTransaction InternalTransactions = 5;
  repeated bytes ExternalTransactions = 6;
  string Sign = 7;
}
